Fix review: use z-index > 0

--- a/styles/style.css
+++ b/styles/style.css
@@ -78,7 +78,6 @@ body {
 
 .cover {
   position: relative;
-  z-index: -2;
   height: 757px;
   margin-bottom: 180px;
   background-image: url('../images/cover.jpg');
@@ -89,7 +88,7 @@ body {
 .overlay {
   position: absolute;
   inset: 0;
-  z-index: -1;
+  z-index: 1;
   background-color: rgb(0 0 0 / 60%);
 }
 
@@ -108,6 +107,7 @@ body {
 }
 
 .aligned-text {
+  z-index: 2;
   display: inline-flex;
   justify-content: start;
   align-items: center;
@@ -116,6 +116,7 @@ body {
 }
 
 .aligned-text_center {
+  z-index: 2;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -123,6 +124,7 @@ body {
 }
 
 .aligned-text_right {
+  z-index: 2;
   display: inline-flex;
   justify-content: end;
   align-items: center;
@@ -147,6 +149,7 @@ body {
 }
 
 .cover__description-text {
+  z-index: 2;
   color: #fff;
   font-weight: 400;
   font-style: normal;
@@ -158,6 +161,7 @@ body {
 }
 
 .bet-button {
+  z-index: 2;
   padding: 12px 33px;
   border: 1px solid;
   background-color: transparent;
@@ -237,6 +241,7 @@ body {
 }
 
 .card__title {
+  z-index: 2;
   margin: 50px 40px 0;
   color: #fff;
   font-weight: 700;
@@ -249,6 +254,7 @@ body {
 }
 
 .card__text {
+  z-index: 2;
   margin: 0 40px 50px;
   color: #fff;
   font-weight: 400;
